fixed spacing on navbar logo

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .MuiPaper-root {
 	background-color: #292929 !important;
 }
@@ -34,6 +36,7 @@ a .MuiListItem-button, .MuiIconButton-root {
 
 .logo-container {
 	margin-left: 50%;
+	left: -30px;
 	text-align: center;
 	padding-top: 8px;
 	padding-bottom: 8px;
@@ -42,8 +45,7 @@ a .MuiListItem-button, .MuiIconButton-root {
 }
 
 .header-logo {
-	height: 60px;
-	margin-left: -60px;
+	width: 60px;
 	text-align: center;
 }
 
